add api service and api error removed tests for now, will make unit + integration test soon refactor logger to method

--- a/Xpense/Localizable.strings
+++ b/Xpense/Localizable.strings
@@ -9,3 +9,5 @@
 "transaction-listing-tab-title" = "Transactions";
 "category-listing-tab-title" = "Categories";
 "settings-tab-title" = "Settings";
+
+"api-error-generic" = "Something went wrong 😱";
