--- a/Xpense/Localizable.strings
+++ b/Xpense/Localizable.strings
@@ -9,6 +9,9 @@
 "transaction-tab-title" = "Transactions";
 "category-tab-title" = "Categories";
 
+"transaction-list-by-day" = "Day";
+"transaction-list-by-month" = "Month";
+
 "add-transaction-title" = "Add Transaction";
 "add-transaction-title-placeholder" = "Title";
 "add-transaction-amount-placeholder" = "10";
